# World-Of-AI

./: General Questions.md  Ollama.ipynb  Programming Language Questions.md  README.md  programming-solutions.ipynb  pyproject.toml
.obsidian/: Data Structures.md  Databases.md  Interview Questions.md  Machine Learning.md  Programming.md  workspace.json
.obsidian/.obsidian/: workspace.json
Images/: extract_images_from_url.ipynb
Interview Questions/: Database Questions.md  Numerical Questions.md
LLM/Langchain/: google-gen-ai.ipynb  ollama.ipynb
