[tool.poetry]
name = "world-of-ai"
version = "0.1.0"
description = ""
authors = ["Priyadarshi Roy <proy9714@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.8"
langchain-community = "^0.0.21"
langchain-core = "^0.1.25"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
pandas = "^2.2.0"
openai = "^1.12.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.1"
nltk = "^3.8.1"
asyncio = "^3.4.3"
langchainhub = "^0.1.14"
torch = "^2.2.0"
torchvision = "^0.17.0"
keras = "^3.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
